tests/v0-fail/choice.out
Running <root>/choice.cli ...

printf "hello\n"
---
hello
---
ERROR: choice { ... } at line <root>/choice.cli:4 does not match output line "hello"
[XX] missed sequence { ... }
  [XX] missed choice { ... }
    [XX] missed "foo" != "hello"
    [XX] missed "bar" != "hello"
    [XX] missed "baz" != "hello"

❌ FAIL

<root>/choice.cli FAILED
Error: choice { ... } at line <root>/choice.cli:4 does not match output line "hello"

