tests/v0-fail/choice.cli
#!/usr/bin/env clitest --v0

$ printf "hello\n"
choice {
    ! foo
    ! bar
    ! baz
}
